tests/error/typedef_and_anonymous_use.c
// fail "Undeclared identifier."

typedef struct b{
    struct{
        struct unresolved a;
    };
} b;
